[tool.poetry]
name = "ASCII-ART-GENERATOR"
version = "0.1.8"
description = "Convert Images and Texts Into ASCII Art."
authors = ["freeking219314@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"